--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇮🇹 意大利-1.27MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.71MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.86MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 38.68.134.191, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.68.134.191, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.68.134.191, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇻🇳 越南-932.4KB/s(Youtube:不良林), server: 103.147.126.127, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.147.126.127}}
+  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
