--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.66MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-413.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-553.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-892.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 38.68.134.191, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.68.134.191, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-698.0KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.09MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-1.89MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.74MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇻🇳 越南-932.4KB/s(Youtube:不良林), server: 103.147.126.127, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.147.126.127}}
   - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.84MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-413.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-553.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-698.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.89MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-932.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
